2015-02-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): For searches uses regex, 
	keep on searching for a match for a longer search string even if 
	a shorter search string was not found.  Report from Werner 
	Lemberg.

	* info/session.c (window_set_state, window_get_state): Save 
	point of window so we know where to position cursor when we go 
	back to a failing search.  Call display_update_one_window when 
	going back to a failing search.

2015-02-06  Karl Berry  <karl@gnu.org>

	* texindex/Makefile.am (ti.info, ti.html): let's generate files by
	these names, since it is not a user manual, hence not intended to be
	installed in the Info directory.  @setfilename remains texindex
	since the .awk is the principal output.

	* doc/texinfo.tex: make exact @findex entries for @w and @c.
	Suggestion from Gavin, 6 Feb 2015 16:38:26.

2015-02-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* texindex/Makeinfo.am: Change rule to build "ti.info" to build
	"texindex.info", which is the name set with @setfilename in 
	ti.texi.

2015-02-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Info Format Specification): Remove mention 
	of quoting for certain characters in node names.

2015-02-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/README: Remove mention of texindex.

2015-02-05  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\commondummies): add forgotten \mathopsup,
	\sub, \sup.
	
	* doc/texinfo.tex (\nonasciistringdefs): new macros,
	to define every char from ^^a0 to ^^ff as (the typesettable
	version of) itself.
	(@normalturnoffactive): call that; else eight-bit chars
	(that don't correspond to known Texinfo commands) in node names
	get an error.  Report from Walter Garcia-Fontes, 5 Feb 2015 10:36:39.

2015-02-03  Karl Berry  <karl@gnu.org>

	* tp/Texinfo/Convert/HTML.pm (output): foolishly omitted closing "
	on $bodytext.  Regenerate test results.
